Adding html basic templates for month, week and year

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Today</a></li>
-                    <li><a href="#about">Week</a></li>
-                    <li><a href="#contact">Month</a></li>
-                    <li><a href="#contact">Year</a></li>
+                    <li><a href="week.html">Week</a></li>
+                    <li><a href="month.html">Month</a></li>
+                    <li><a href="year.html">Year</a></li>
                 </ul>
             </div>
         </div>
@@ -77,10 +77,12 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading ">
-                        <span class="panel-title">Today's Tracked Periods</span>
+                        <span class="panel-title">Today's Tracked Periods (component)</span>
                         <span class="pull-right"> <button type="button" class="btn btn-xs btn-success"> ADD </button></span>
                     </div>
 
+
+                    <!--========================= MAKE THIS TABLE A COMPONENT: THIS SHOULD BE REUSED IN THE WEEK VIEW WHEN CLICK A DAY ============================= -->
                     <table class="table table-hover">
                         <thead>
                             <tr>
